xidlc/tests/snapshots/codegen_snapshot__rust__enum_simple.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
enum_simple.rs
===============
// Code generated by xidlc-v0.80.1-dc38446f. DO NOT EDIT.

#[derive(
    Debug,
    Clone,
    PartialEq,
    ::serde::Serialize,
    ::serde::Deserialize,
    Copy,
    Eq,
    Default,
)]
pub enum A {
    #[default]
    B,
    C,
}
