xidlc/tests/snapshots/codegen_snapshot__rust__enum_simple_comma.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
enum_simple_comma.rs
===============
#![allow(unused_imports)]
#![allow(non_upper_case_globals)]
#![allow(non_snake_case)]
#![allow(unused_variables)]
#![allow(unreachable_patterns)]
#[derive(Debug, Clone, Copy, PartialEq, Eq, Default)]
pub enum A {
    #[default]
    B,
    C,
}
impl xidl_xcdr::XcdrSerialize for A {
    fn serialize_with<S: xidl_xcdr::XcdrSerializer + ?Sized>(
        &self,
        serializer: &mut S,
    ) -> xidl_xcdr::error::XcdrResult<()> {
        let value = *self as u32;
        xidl_xcdr::XcdrSerialize::serialize_with(&value, serializer)
    }
}
impl xidl_xcdr::XcdrDeserialize for A {
    fn deserialize<D: xidl_xcdr::XcdrDeserializer + ?Sized>(
        deserializer: &mut D,
    ) -> xidl_xcdr::error::XcdrResult<Self> {
        let value: u32 = xidl_xcdr::XcdrDeserialize::deserialize(deserializer)?;
        match value {
            0 => Ok(Self::B),
            1 => Ok(Self::C),
            _ => {
                Err(
                    xidl_xcdr::error::XcdrError::Message(
                        format!("invalid A discriminant: {}", value),
                    ),
                )
            }
        }
    }
}
