xidlc/tests/snapshots/codegen_snapshot__rust__except_dcl.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
except_dcl.rs
===============
#[allow(unused_imports)]
#[allow(non_upper_case_globals)]
#[allow(non_snake_case)]
#[allow(unused_variables)]
#[allow(unreachable_patterns)]
#[derive(Debug, Clone)]
pub struct HelloWorld {
    pub a: u8,
    pub b: [u16; 10],
    pub c: [[String; 20]; 10],
    pub c: Vec<u8>,
    pub d: String,
    pub d: String,
    pub d: f64,
}
