xidlc/tests/snapshots/codegen_snapshot__rust__module_dcl.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
module_dcl.rs
===============
// Code generated by xidlc-v0.71.0-snapshot. DO NOT EDIT.

#[allow(non_snake_case)]
pub mod A {}
#[allow(non_snake_case)]
pub mod B {
    #[allow(non_upper_case_globals)]
    pub const a: u8 = 10;
}
