xidlc/tests/snapshots/codegen_snapshot__rust__option.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
option.rs
===============
pub struct A {
    pub a: Option<String>,
}
impl A {}
