xidlc/tests/snapshots/codegen_snapshot__rust__preproc.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
preproc.rs
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

#[allow(non_snake_case)]
pub mod A {}
