xidlc/tests/snapshots/codegen_snapshot__rust__rust_annotation_passthrough.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
rust_annotation_passthrough.rs
===============
#[allow(unused_imports)]
#[allow(non_upper_case_globals)]
#[allow(non_snake_case)]
#[allow(unused_variables)]
#[allow(unreachable_patterns)]
#[serde(rename_all = "camelCase")]
#[inline]
#[derive(Default)]
pub struct User {
    #[serde(rename = "userId")]
    pub user_id: String,
}
impl User {}
#[allow(unused_imports)]
#[allow(non_upper_case_globals)]
#[allow(non_snake_case)]
#[allow(unused_variables)]
#[allow(unreachable_patterns)]
#[repr(u8)]
#[non_exhaustive]
#[derive(Debug, Clone, Copy, PartialEq, Eq, Default)]
pub enum Color {
    #[deprecated(note = "primary red")]
    #[default]
    Red,
    Green,
}
#[allow(unused_imports)]
#[allow(non_upper_case_globals)]
#[allow(non_snake_case)]
#[allow(unused_variables)]
#[allow(unreachable_patterns)]
pub const Api_ping_Hash: i32 = 18846175;
#[allow(unused_imports)]
#[allow(non_upper_case_globals)]
#[allow(non_snake_case)]
#[allow(unused_variables)]
#[allow(unreachable_patterns)]
#[derive(Default)]
pub struct Api_ping_In {
    pub dummy: dds::rpc::UnusedMember,
}
impl Api_ping_In {}
#[allow(unused_imports)]
#[allow(non_upper_case_globals)]
#[allow(non_snake_case)]
#[allow(unused_variables)]
#[allow(unreachable_patterns)]
#[derive(Default)]
pub struct Api_ping_Out {
    pub dummy: dds::rpc::UnusedMember,
}
impl Api_ping_Out {}
#[allow(unused_imports)]
#[allow(non_upper_case_globals)]
#[allow(non_snake_case)]
#[allow(unused_variables)]
#[allow(unreachable_patterns)]
pub struct Api_ping_Result {
    tag: i32,
    data: Api_ping_ResultData,
}
union Api_ping_ResultData {
    result: core::mem::ManuallyDrop<Api_ping_Out>,
}
impl Drop for Api_ping_Result {
    fn drop(&mut self) {
        match self.tag {
            dds::RETCODE_OK => {
                unsafe {
                    core::mem::ManuallyDrop::drop(&mut self.data.result);
                }
            }
        }
    }
}
impl Api_ping_Result {
    pub fn new_result(value: Api_ping_Out) -> Self {
        Self {
            tag: dds::RETCODE_OK,
            data: Api_ping_ResultData {
                result: core::mem::ManuallyDrop::new(value),
            },
        }
    }
    pub fn is_result(&self) -> bool {
        matches!(self.tag, dds::RETCODE_OK)
    }
    pub fn as_result(&self) -> &Api_ping_Out {
        debug_assert!(self.is_result());
        unsafe { &self.data.result }
    }
    pub fn as_result_mut(&mut self) -> &mut Api_ping_Out {
        debug_assert!(self.is_result());
        unsafe { &mut self.data.result }
    }
    pub fn into_result(self) -> Api_ping_Out {
        debug_assert!(self.is_result());
        unsafe {
            let mut forget = core::mem::ManuallyDrop::new(self);
            core::mem::ManuallyDrop::take(&mut forget.data.result)
        }
    }
    pub fn tag(&self) -> &i32 {
        &self.tag
    }
}
impl Default for Api_ping_Result {
    fn default() -> Self {
        Self {
            tag: dds::RETCODE_OK,
            data: Api_ping_ResultData {
                result: core::mem::ManuallyDrop::new(Api_ping_Out::default()),
            },
        }
    }
}
#[allow(unused_imports)]
#[allow(non_upper_case_globals)]
#[allow(non_snake_case)]
#[allow(unused_variables)]
#[allow(unreachable_patterns)]
pub struct Api_Call {
    tag: i32,
    data: Api_CallData,
}
union Api_CallData {
    unknownOp: core::mem::ManuallyDrop<dds::rpc::UnknownOperation>,
    ping: core::mem::ManuallyDrop<Api_ping_In>,
}
impl Drop for Api_Call {
    fn drop(&mut self) {
        if matches!(self.tag, Api_ping_Hash) {
            unsafe {
                core::mem::ManuallyDrop::drop(&mut self.data.ping);
            }
        } else {
            unsafe {
                core::mem::ManuallyDrop::drop(&mut self.data.unknownOp);
            }
        }
    }
}
impl Api_Call {
    pub fn new_unknownOp(value: dds::rpc::UnknownOperation) -> Self {
        Self {
            tag: Api_ping_Hash,
            data: Api_CallData {
                unknownOp: core::mem::ManuallyDrop::new(value),
            },
        }
    }
    pub fn is_unknownOp(&self) -> bool {
        matches!(self.tag, Api_ping_Hash)
    }
    pub fn as_unknownOp(&self) -> &dds::rpc::UnknownOperation {
        debug_assert!(self.is_unknownOp());
        unsafe { &self.data.unknownOp }
    }
    pub fn as_unknownOp_mut(&mut self) -> &mut dds::rpc::UnknownOperation {
        debug_assert!(self.is_unknownOp());
        unsafe { &mut self.data.unknownOp }
    }
    pub fn into_unknownOp(self) -> dds::rpc::UnknownOperation {
        debug_assert!(self.is_unknownOp());
        unsafe {
            let mut forget = core::mem::ManuallyDrop::new(self);
            core::mem::ManuallyDrop::take(&mut forget.data.unknownOp)
        }
    }
    pub fn new_ping(value: Api_ping_In) -> Self {
        Self {
            tag: i32::default(),
            data: Api_CallData {
                ping: core::mem::ManuallyDrop::new(value),
            },
        }
    }
    pub fn is_ping(&self) -> bool {
        matches!(self.tag, _)
    }
    pub fn as_ping(&self) -> &Api_ping_In {
        debug_assert!(self.is_ping());
        unsafe { &self.data.ping }
    }
    pub fn as_ping_mut(&mut self) -> &mut Api_ping_In {
        debug_assert!(self.is_ping());
        unsafe { &mut self.data.ping }
    }
    pub fn into_ping(self) -> Api_ping_In {
        debug_assert!(self.is_ping());
        unsafe {
            let mut forget = core::mem::ManuallyDrop::new(self);
            core::mem::ManuallyDrop::take(&mut forget.data.ping)
        }
    }
    pub fn tag(&self) -> &i32 {
        &self.tag
    }
}
impl Default for Api_Call {
    fn default() -> Self {
        Self {
            tag: i32::default(),
            data: Api_CallData {
                unknownOp: core::mem::ManuallyDrop::new(
                    dds::rpc::UnknownOperation::default(),
                ),
            },
        }
    }
}
#[allow(unused_imports)]
#[allow(non_upper_case_globals)]
#[allow(non_snake_case)]
#[allow(unused_variables)]
#[allow(unreachable_patterns)]
#[derive(Default)]
pub struct Api_Request {
    pub header: dds::rpc::RequestHeader,
    pub data: Api_Call,
}
impl Api_Request {}
#[allow(unused_imports)]
#[allow(non_upper_case_globals)]
#[allow(non_snake_case)]
#[allow(unused_variables)]
#[allow(unreachable_patterns)]
pub struct Api_Return {
    tag: i32,
    data: Api_ReturnData,
}
union Api_ReturnData {
    unknownOp: core::mem::ManuallyDrop<dds::rpc::UnknownOperation>,
    ping: core::mem::ManuallyDrop<Api_ping_Result>,
}
impl Drop for Api_Return {
    fn drop(&mut self) {
        if matches!(self.tag, Api_ping_Hash) {
            unsafe {
                core::mem::ManuallyDrop::drop(&mut self.data.ping);
            }
        } else {
            unsafe {
                core::mem::ManuallyDrop::drop(&mut self.data.unknownOp);
            }
        }
    }
}
impl Api_Return {
    pub fn new_unknownOp(value: dds::rpc::UnknownOperation) -> Self {
        Self {
            tag: Api_ping_Hash,
            data: Api_ReturnData {
                unknownOp: core::mem::ManuallyDrop::new(value),
            },
        }
    }
    pub fn is_unknownOp(&self) -> bool {
        matches!(self.tag, Api_ping_Hash)
    }
    pub fn as_unknownOp(&self) -> &dds::rpc::UnknownOperation {
        debug_assert!(self.is_unknownOp());
        unsafe { &self.data.unknownOp }
    }
    pub fn as_unknownOp_mut(&mut self) -> &mut dds::rpc::UnknownOperation {
        debug_assert!(self.is_unknownOp());
        unsafe { &mut self.data.unknownOp }
    }
    pub fn into_unknownOp(self) -> dds::rpc::UnknownOperation {
        debug_assert!(self.is_unknownOp());
        unsafe {
            let mut forget = core::mem::ManuallyDrop::new(self);
            core::mem::ManuallyDrop::take(&mut forget.data.unknownOp)
        }
    }
    pub fn new_ping(value: Api_ping_Result) -> Self {
        Self {
            tag: i32::default(),
            data: Api_ReturnData {
                ping: core::mem::ManuallyDrop::new(value),
            },
        }
    }
    pub fn is_ping(&self) -> bool {
        matches!(self.tag, _)
    }
    pub fn as_ping(&self) -> &Api_ping_Result {
        debug_assert!(self.is_ping());
        unsafe { &self.data.ping }
    }
    pub fn as_ping_mut(&mut self) -> &mut Api_ping_Result {
        debug_assert!(self.is_ping());
        unsafe { &mut self.data.ping }
    }
    pub fn into_ping(self) -> Api_ping_Result {
        debug_assert!(self.is_ping());
        unsafe {
            let mut forget = core::mem::ManuallyDrop::new(self);
            core::mem::ManuallyDrop::take(&mut forget.data.ping)
        }
    }
    pub fn tag(&self) -> &i32 {
        &self.tag
    }
}
impl Default for Api_Return {
    fn default() -> Self {
        Self {
            tag: i32::default(),
            data: Api_ReturnData {
                unknownOp: core::mem::ManuallyDrop::new(
                    dds::rpc::UnknownOperation::default(),
                ),
            },
        }
    }
}
#[allow(unused_imports)]
#[allow(non_upper_case_globals)]
#[allow(non_snake_case)]
#[allow(unused_variables)]
#[allow(unreachable_patterns)]
#[derive(Default)]
pub struct Api_Reply {
    pub header: dds::rpc::ReplyHeader,
    pub data: Api_Return,
}
impl Api_Reply {}
#[allow(unused_imports)]
#[allow(non_upper_case_globals)]
#[allow(non_snake_case)]
#[allow(unused_variables)]
#[allow(unreachable_patterns)]
#[allow(async_fn_in_trait)]
pub trait Api {
    #[cfg(feature = "client")]
    fn ping(&self) -> ();
}
