xidlc/tests/snapshots/codegen_snapshot__rust__self_referential_struct.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
self_referential_struct.rs
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

#[derive(Debug, Clone, PartialEq, ::serde::Serialize, ::serde::Deserialize)]
#[derive(Default)]
pub struct Node {
    pub next: Box<Node>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub prev: Option<Box<Node>>,
    pub children: Vec<Node>,
}
impl Node {}
#[derive(Debug, Clone, PartialEq, ::serde::Serialize, ::serde::Deserialize)]
#[derive(Default)]
pub struct Left {
    pub right: Box<Right>,
}
impl Left {}
#[derive(Debug, Clone, PartialEq, ::serde::Serialize, ::serde::Deserialize)]
#[derive(Default)]
pub struct Right {
    pub left: Box<Left>,
}
impl Right {}
