xidlc/tests/snapshots/codegen_snapshot__rust__simple_union.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
simple_union.rs
===============
// Code generated by xidlc-v0.71.0-snapshot. DO NOT EDIT.

#[derive(
    Debug,
    Clone,
    PartialEq,
    ::serde::Serialize,
    ::serde::Deserialize,
    Copy,
    Eq,
    Default,
)]
pub enum Tag {
    #[default]
    A,
    B,
}
pub struct SimpleUnion {
    tag: Tag,
    data: SimpleUnionData,
}
union SimpleUnionData {
    a: core::mem::ManuallyDrop<int>,
    b: core::mem::ManuallyDrop<int>,
}
impl Drop for SimpleUnion {
    #[allow(unreachable_patterns)]
    fn drop(&mut self) {
        match self.tag {
            A => {
                unsafe {
                    core::mem::ManuallyDrop::drop(&mut self.data.a);
                }
            }
            B => {
                unsafe {
                    core::mem::ManuallyDrop::drop(&mut self.data.b);
                }
            }
            _ => {}
        }
    }
}
impl Clone for SimpleUnion {
    #[allow(clippy::clone_on_copy)]
    #[allow(unreachable_patterns)]
    fn clone(&self) -> Self {
        match self.tag {
            A => Self::new_a(self.as_a().clone()),
            B => Self::new_b(self.as_b().clone()),
            _ => unreachable!(),
        }
    }
}
impl core::fmt::Debug for SimpleUnion {
    #[allow(unreachable_patterns)]
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> core::fmt::Result {
        let mut d = f.debug_struct("SimpleUnion");
        d.field("tag", &self.tag);
        match self.tag {
            A => {
                d.field("a", self.as_a());
            }
            B => {
                d.field("b", self.as_b());
            }
            _ => {}
        }
        d.finish()
    }
}
impl PartialEq for SimpleUnion {
    #[allow(unreachable_patterns)]
    fn eq(&self, other: &Self) -> bool {
        if self.tag != other.tag {
            return false;
        }
        match self.tag {
            A => self.as_a() == other.as_a(),
            B => self.as_b() == other.as_b(),
            _ => false,
        }
    }
}
impl SimpleUnion {
    pub fn new_a(value: int) -> Self {
        Self {
            tag: A,
            data: SimpleUnionData {
                a: core::mem::ManuallyDrop::new(value),
            },
        }
    }
    pub fn is_a(&self) -> bool {
        matches!(self.tag, A)
    }
    #[allow(clippy::borrowed_box)]
    pub fn as_a(&self) -> &int {
        debug_assert!(self.is_a());
        unsafe { &self.data.a }
    }
    #[allow(clippy::borrowed_box)]
    pub fn as_a_mut(&mut self) -> &mut int {
        debug_assert!(self.is_a());
        unsafe { &mut self.data.a }
    }
    pub fn into_a(self) -> int {
        debug_assert!(self.is_a());
        unsafe {
            let mut forget = core::mem::ManuallyDrop::new(self);
            core::mem::ManuallyDrop::take(&mut forget.data.a)
        }
    }
    pub fn new_b(value: int) -> Self {
        Self {
            tag: B,
            data: SimpleUnionData {
                b: core::mem::ManuallyDrop::new(value),
            },
        }
    }
    pub fn is_b(&self) -> bool {
        matches!(self.tag, B)
    }
    #[allow(clippy::borrowed_box)]
    pub fn as_b(&self) -> &int {
        debug_assert!(self.is_b());
        unsafe { &self.data.b }
    }
    #[allow(clippy::borrowed_box)]
    pub fn as_b_mut(&mut self) -> &mut int {
        debug_assert!(self.is_b());
        unsafe { &mut self.data.b }
    }
    pub fn into_b(self) -> int {
        debug_assert!(self.is_b());
        unsafe {
            let mut forget = core::mem::ManuallyDrop::new(self);
            core::mem::ManuallyDrop::take(&mut forget.data.b)
        }
    }
    pub fn tag(&self) -> &Tag {
        &self.tag
    }
}
impl Default for SimpleUnion {
    fn default() -> Self {
        Self {
            tag: A,
            data: SimpleUnionData {
                a: core::mem::ManuallyDrop::new(int::default()),
            },
        }
    }
}
#[derive(::serde::Serialize)]
struct SimpleUnionSerdeRef<'__a> {
    tag: &'__a str,
    data: SimpleUnionSerdeRefData<'__a>,
}
#[allow(clippy::borrowed_box)]
#[derive(::serde::Serialize)]
#[serde(untagged)]
enum SimpleUnionSerdeRefData<'__a> {
    Case0(&'__a int),
    Case1(&'__a int),
}
impl serde::Serialize for SimpleUnion {
    #[allow(unreachable_patterns)]
    fn serialize<__S>(&self, __serializer: __S) -> Result<__S::Ok, __S::Error>
    where
        __S: serde::Serializer,
    {
        let helper = match self.tag {
            A => {
                let tag = "A";
                SimpleUnionSerdeRef {
                    tag,
                    data: SimpleUnionSerdeRefData::Case0(self.as_a()),
                }
            }
            B => {
                let tag = "B";
                SimpleUnionSerdeRef {
                    tag,
                    data: SimpleUnionSerdeRefData::Case1(self.as_b()),
                }
            }
            _ => unreachable!(),
        };
        helper.serialize(__serializer)
    }
}
#[derive(::serde::Deserialize)]
struct SimpleUnionSerdeOwned {
    tag: String,
    data: ::serde_json::Value,
}
impl<'de> serde::Deserialize<'de> for SimpleUnion {
    fn deserialize<D>(deserializer: D) -> Result<Self, D::Error>
    where
        D: serde::Deserializer<'de>,
    {
        let helper = SimpleUnionSerdeOwned::deserialize(deserializer)?;
        match helper.tag.as_str() {
            "A" => {
                let value = ::serde_json::from_value::<int>(helper.data)
                    .map_err(|err| serde::de::Error::custom(
                        format!(
                            "union SimpleUnion payload decode failed for tag `A`: {err}"
                        ),
                    ))?;
                Ok(Self {
                    tag: A,
                    data: SimpleUnionData {
                        a: core::mem::ManuallyDrop::new(value),
                    },
                })
            }
            "B" => {
                let value = ::serde_json::from_value::<int>(helper.data)
                    .map_err(|err| serde::de::Error::custom(
                        format!(
                            "union SimpleUnion payload decode failed for tag `B`: {err}"
                        ),
                    ))?;
                Ok(Self {
                    tag: B,
                    data: SimpleUnionData {
                        b: core::mem::ManuallyDrop::new(value),
                    },
                })
            }
            _ => {
                Err(
                    serde::de::Error::custom(
                        format!(
                            "union SimpleUnion tag/data mismatch for tag `{}`", helper
                            .tag
                        ),
                    ),
                )
            }
        }
    }
}
