xidlc/tests/snapshots/codegen_snapshot__rust__struct_def.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
struct_def.rs
===============
#[derive(Debug, Clone, PartialEq, ::serde::Serialize, ::serde::Deserialize)]
#[derive(Default)]
pub struct A {}
impl A {}
#[derive(Debug, Clone, PartialEq, ::serde::Serialize, ::serde::Deserialize)]
#[derive(Default)]
pub struct A {
    pub a: i32,
}
impl A {}
#[derive(Debug, Clone, PartialEq, ::serde::Serialize, ::serde::Deserialize)]
#[derive(Default)]
pub struct A {
    pub a: ::A::b,
}
impl A {}
#[derive(Debug, Clone, PartialEq, ::serde::Serialize, ::serde::Deserialize)]
#[derive(Default)]
pub struct A {
    pub base: B,
}
impl A {}
#[derive(Debug, Clone, PartialEq, ::serde::Serialize, ::serde::Deserialize)]
#[derive(Default)]
pub struct _A {}
impl _A {}
#[derive(Debug, Clone, PartialEq, ::serde::Serialize, ::serde::Deserialize)]
#[derive(Default)]
pub struct _Custom {
    pub var_inner: Inner,
}
impl _Custom {}
#[derive(Debug, Clone, PartialEq, ::serde::Serialize, ::serde::Deserialize)]
#[derive(Default)]
pub struct HelloWorld {
    pub a: u8,
    pub b: [u16; 10],
    pub c: [[String; 20]; 10],
    pub c: Vec<u8>,
    pub d: String,
    pub d: String,
    pub d: ::serde_json::Value,
}
impl HelloWorld {}
