xidlc/tests/snapshots/codegen_snapshot__rust__struct_derive.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
struct_derive.rs
===============
// Code generated by xidlc-v0.71.0-snapshot. DO NOT EDIT.

#[derive(Debug, Clone, PartialEq, ::serde::Serialize, ::serde::Deserialize)]
#[derive(Default)]
pub struct A {}
impl A {}
#[derive(Debug, Clone, PartialEq, ::serde::Serialize, ::serde::Deserialize)]
#[derive(Default)]
pub struct B {}
impl B {}
