xidlc/tests/snapshots/codegen_snapshot__rust__struct_empty.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
struct_empty.rs
===============
// Code generated by xidlc-v0.80.1-dc38446f. DO NOT EDIT.
